[package]
name = "polymarket-15m-arbitrage-bot"
version = "0.1.0"
edition = "2021"
description = "Polymarket 15-minute ETH/BTC arbitrage bot — monitors prediction markets and executes cross-market arbitrage"
license = "MIT"
readme = "README.md"
keywords = ["polymarket", "arbitrage", "trading", "btc", "eth", "prediction-market"]
categories = ["command-line-utilities", "financial"]
default-run = "polymarket-15m-arbitrage-bot"

[dependencies]
ethers = { version = "2.0", features = ["eip712", "abigen"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
hex = "0.4"
rand = "0.9.2"
chrono = "0.4.43"
futures-util = "0.3.31"
url = "2.5.8"
dotenv = "0.15"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
colored = "2.1"

[[bin]]
name = "diagnostics"
path = "src/bin/diagnostics.rs"

[[bin]]
name = "test_endpoints"
path = "src/bin/test_endpoints.rs"
rand = "0.8"
